--- a/app/sass/lending.scss
+++ b/app/sass/lending.scss
@@ -253,6 +253,13 @@ header {
     }
 }
 
+.send-msg {
+    background: $clr_main;
+    .end-msg__title {
+        
+    }
+}
+
 .possibilities-app {
     margin-top: 75px;
     background: #fff;
