--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -234,7 +234,20 @@ header {
   margin-bottom: 28px; }
 
 .send-msg {
+  color: #fff;
   background: #21ae78; }
+  .send-msg .send-msg__title {
+    margin-top: 74px;
+    margin-bottom: 47px; }
+  .send-msg .send-msg__item .send-msg__item--img {
+    width: 85px;
+    height: 85px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 33px; }
+  .send-msg .send-msg__item .send-msg__item--txt {
+    text-align: left; }
 
 .possibilities-app {
   margin-top: 75px;
