--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -219,15 +219,34 @@ header {
     font: 15px "Roboto-Light", sans-serif; }
 
 .partners .parters-list {
+  position: relative;
   border: 2px solid #fab31a;
   margin-bottom: 74px;
   padding-bottom: 34px; }
 
 .partners .partners-title {
-  display: inline-block;
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+      -ms-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   text-transform: uppercase;
-  padding: 30px 27px;
+  width: 230px;
+  height: 65px;
   background: #fab31a;
   color: #fff;
   font: 20px "Roboto-Medium", sans-serif;
