--- a/app/sass/lending.scss
+++ b/app/sass/lending.scss
@@ -198,12 +198,18 @@ header {
         background: #e9eef0;
         min-height: 274px;
         box-sizing: content-box;
+        padding-top: 50px;
         .web-app-dev__plarform--title {
             padding-top: 50px;
             line-height: 40px;
         }
-        .web-app-dev__items {
-            padding-top: 50px;
+        .web-app-dev__plarformItems {
+            width: 100%;
+            margin-top: 50px;
+            .web-app-dev__plarformItem {
+                display: inline-block;
+                width: 15%;
+            }
         }
     }
 }
