--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -243,7 +243,7 @@ header {
     padding: 19px 41px;
     font: 15px "Roboto-Light", sans-serif; }
 
-.partners .parters-list {
+.partners .partners-list {
   position: relative;
   border: 2px solid #fab31a;
   margin-bottom: 74px;
