--- a/app/sass/lending.scss
+++ b/app/sass/lending.scss
@@ -264,7 +264,7 @@ header {
 }
 
 .partners {
-    .parters-list {
+    .partners-list {
         position: relative;
         border:2px solid $clr_main2;
         margin-bottom: 74px;
@@ -467,6 +467,7 @@ header {
         font-family: $fnt_rb;
     }
 }
+
 
 .slider-laptop {
     .slider-laptop__items {
