--- a/app/sass/lending.scss
+++ b/app/sass/lending.scss
@@ -262,13 +262,19 @@ header {
         }
     }
 }
-
 .partners {
     .parters-list {
         position: relative;
         border:2px solid $clr_main2;
         margin-bottom: 74px;
         padding-bottom: 34px;
+        &__item {
+            display: inline-block;
+            width: 33%;
+            text-align: center;
+            vertical-align: middle;
+            margin: 15px 0;
+        }
     }
     
     .partners-title {
