--- a/app/css/libs/flexslider.css
+++ b/app/css/libs/flexslider.css
@@ -53,7 +53,7 @@
   display: block;
 }
 .flexslider .slides:after {
-  content: "\0020";
+  content: "";
   display: block;
   clear: both;
   visibility: hidden;
@@ -130,17 +130,6 @@ html[xmlns] .flexslider .slides {
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-.flex-direction-nav a:before {
-  font-family: "flexslider-icon";
-  font-size: 40px;
-  display: inline-block;
-  content: '\f001';
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
-}
-.flex-direction-nav a.flex-next:before {
-  content: '\f002';
-}
 .flex-direction-nav .flex-prev {
   left: -50px;
 }
@@ -170,18 +159,11 @@ html[xmlns] .flexslider .slides {
   cursor: pointer;
   color: #000;
 }
-.flex-pauseplay a:before {
-  font-family: "flexslider-icon";
-  font-size: 20px;
-  display: inline-block;
-  content: '\f004';
-}
+
 .flex-pauseplay a:hover {
   opacity: 1;
 }
-.flex-pauseplay a.flex-play:before {
-  content: '\f003';
-}
+
 .flex-control-nav {
   width: 100%;
   position: absolute;
