--- a/app/css/lending.css
+++ b/app/css/lending.css
@@ -97,10 +97,9 @@ header {
   position: absolute;
   display: block;
   top: 27%;
-  left: 35%;
-  -webkit-transform: translate(-40%, 40%);
-      -ms-transform: translate(-40%, 40%);
-          transform: translate(-40%, 40%); }
+  -webkit-transform: translate(46%, 50%);
+      -ms-transform: translate(46%, 50%);
+          transform: translate(46%, 50%); }
   .main .main-slogan-wrap .main-slogan {
     text-transform: uppercase;
     text-align: left;
@@ -307,7 +306,10 @@ header {
     .possibilities-app .possibilities-app__item img {
       max-width: 472px;
       width: 100%;
-      height: 354px; }
+      height: 354px;
+      padding-bottom: 4px; }
+    .possibilities-app .possibilities-app__item:nth-child(9) img, .possibilities-app .possibilities-app__item:nth-child(10) img, .possibilities-app .possibilities-app__item:nth-child(11) img, .possibilities-app .possibilities-app__item:nth-child(12) img {
+      padding-bottom: 0; }
     .possibilities-app .possibilities-app__item .possibilities-app__item--txt {
       display: -webkit-box;
       display: -webkit-flex;
