--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -1,7 +1,6 @@
-@import "mixin.scss";
-@import "fonts.scss";
-@import "variables.scss";
-
-@import "lending.scss";
+@import "_mixin";
+@import "_fonts";
+@import "_variables";
+@import "_lending";
 
 
