--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -551,6 +551,15 @@ header {
   margin-top: 50px;
   border: none; }
 
+.slider-laptop .slider-1 .flex-prev:before {
+  content: "";
+  background: url(../images/slider-2-next.png) 0 0 no-repeat;
+  width: 22px;
+  height: 181px;
+  position: absolute;
+  top: -72px;
+  right: 0px; }
+
 /*
     * slider 2
 */
