--- a/app/sass/lending.scss
+++ b/app/sass/lending.scss
@@ -1,6 +1,5 @@
-@import "_variables";
-@import "_mixin";
-
+@import "variables.scss";
+@import "mixin.scss";
 .center-block {
     text-align: center;
 }
@@ -22,11 +21,6 @@ a:hover {
     color: #fff;
     font-size: 16px;
     border-radius: 5px;
-    &:active, &:focus, &:hover {
-        text-decoration: none;
-        outline: none;
-        color: #fff;
-    }
 }
 .btn-top {
     display: none;
@@ -179,12 +173,12 @@ header {
             height: 75px;
             margin-left: auto;
             margin-right: auto;
-            background: url(../images/icons_clients.svg?v=5) no-repeat;
         }
         &:first-child {
             background: #4ba5f0;
             .web-app-dev__item-img {
                 margin: 50px auto;
+                background: url(../images/icons_clients.svg) no-repeat;
             }
         }
         &:nth-child(2) {
@@ -192,6 +186,7 @@ header {
             .web-app-dev__item-img {
                 margin-top: 41px;
                 margin-bottom: 37px;
+                background: url(../images/icons_clients.svg) no-repeat;
                 background-position: -75px;
             }
         }
@@ -200,6 +195,7 @@ header {
             .web-app-dev__item-img {
                 margin-top: 40px;
                 margin-bottom: 62px;
+                background: url(../images/icons_clients.svg) no-repeat;
                 background-position: -150px;
             }
         }
@@ -209,6 +205,7 @@ header {
             .web-app-dev__item-img {
                 margin-top: 42px;
                 margin-bottom: 48px;
+                background: url(../images/icons_clients.svg) no-repeat;
                 background-position: -225px;
             }
         }
@@ -485,27 +482,12 @@ header {
 
 .slider-laptop {
     .slider-laptop__items {
-        position: relative;
         @include background(laptop, png, center center, 530px, contain); 
         transform: translate(0,-25%);
     }
 }
 
 .free-consultation {
-    position: relative;
-    .free-consultation--close {
-        position: absolute;
-        top: 0;
-        right: 0;
-        background: $clr_main;
-        color: #fff;
-        text-align: center;
-        font-size: 14px;
-        line-height: 34px;
-        width: 32px;
-        height: 32px;
-        cursor: pointer;
-    }
     @include background(form-bg, jpg, center center, 478px, contain);
     max-width: 678px;
     width: 100%;
@@ -544,7 +526,7 @@ header {
         font: 16px $fnt_rb;
     }
     .free-consultation__txt--title {
-        padding-top: 30px;
+        padding-top: 43px;
         margin-bottom: 25px;
         color: #2c2c2c;
         font: 26px $fnt_rm;
@@ -558,7 +540,7 @@ header {
         margin-bottom: 21px;
     }
     .free-consultation__item {
-        .free-consultation__item--btn, .free-consultation__item--response {
+        .free-consultation__item--btn, .free-consultation__items--response {
             display: inline-block;
         }
         .free-consultation__item--response {
@@ -584,96 +566,38 @@ header {
     }
 }
 
-
-/*
-    *flexslider slider-laptop
-*/
-.slider-laptop {
-    .slider-1 {
-        position: absolute;
-        top: 2%;
-        left: 28%;
-        margin: 0 auto;
-        max-width: 628px;
-        width: 100%;
-        max-height: 398px;
-        overflow: hidden;
-        margin-top: 50px;
-        border: none;
-    }
-    .slider-1 .flex-prev:before{
-        content: "";
-        background: url(../images/slider-2-next.png) 0 0 no-repeat;
-        width: 22px;
-        height: 181px;
-        position: absolute;
-        top: -72px;
-        right: 0px;
-    }
+.slider-2{
+    margin: 0 auto;
+    max-width: 772px;
+    max-height: 182px;
+    border-left: 1px solid #fab31a;
+    border-right: 1px solid #fab31a;
+    overflow: hidden;
+    margin-top: 50px;
 }
-/*
-    * slider 2
-*/
-.get-mob-app {
-    .flexslider:hover .flex-direction-nav .flex-prev {
-        opacity: .7;
-        left: 0px;
-    }
-    .flexslider:hover .flex-direction-nav .flex-next {
-        opacity: .7;
-        right: 0px;
-    }
-    .slider-2 {
-        margin: 0 auto;
-        max-width: 772px;
-        max-height: 182px;
-        border-left: 1px solid #fab31a;
-        border-right: 1px solid #fab31a;
-        overflow: hidden;
-        margin-top: 50px;
-    }
-    .slider-2 .flex-prev:before {
-        content: "";
-        background: url(../images/slider-2-prev.png) 0 0 no-repeat;
-        width: 22px;
-        height: 181px;
-        position: absolute;
-        top: -72px;
-        left: 0px;
-    }
-    .slider-2 .flex-next:before {
-        content: "";
-        background: url(../images/slider-2-next.png) 0 0 no-repeat;
-        width: 22px;
-        height: 181px;
-        position: absolute;
-        top: -72px;
-        right: 0px;
-    }
-    .slider-2 .flex-direction-nav .flex-prev, .slider-2 .flex-direction-nav .flex-next,
-    .slider-2 .flex-direction-nav .flex-prev:hover, .slider-2 .flex-direction-nav .flex-next:hover  {
-        opacity: 1;
-    }
+.slider-2 .flex-prev:before{
+    content: "";
+    background: url(../images/slider-2-next.png) 0 0 no-repeat;
+    width: 183px;
+    height: 181px;
+    position: absolute;
+    top: -72px;
+    left: 19px;
+}
 
-    .slider-2 .flex-direction-nav .flex-next {
-        right: 0px;
-    }
-    .slider-2 .flex-direction-nav .flex-prev {
-        left: 0px;
-    }
-    .slider2__item--txt {
-        padding-top: 8%;
-        font: 18px $fnt_rl;
-    }
-    .slider2__item--bold {
-        font: 18px $fnt_rb;
-        text-transform: uppercase;
-    }
-    .slider2__item--img {
-        text-align: center;
-        img{
-            display: inline-block!important;
-            width:auto!important;
-        }
+.slider-2 .flex-direction-nav .flex-next {
+  right: -20px;
+}
+.slider-2 .flex-direction-nav .flex-prev{
+    left: -18px;
+}
+.slider2__item--txt {
+    padding-top: 10%;
+}
+.slider2__item--img{
+    text-align: center;
+    img{
+        display: inline-block!important;
+        width:auto!important;
     }
 }
