--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -384,17 +384,18 @@ header {
     text-align: center;
     color: #fab31a;
     font: 20px "Roboto-Medium", sans-serif; }
-  .block-form .block-form__form input[type="text"],
+  .block-form .block-form__form input[type="text"], .block-form .block-form__form input[type="email"],
   .block-form .block-form__form textarea {
     color: #a7a7a7;
     width: 570px;
     background: #313a3d;
     border: none;
     padding-left: 34px; }
-  .block-form .block-form__form input[type="text"] {
+  .block-form .block-form__form input[type="text"], .block-form .block-form__form input[type="email"] {
     height: 50px;
     margin-bottom: 7px; }
   .block-form .block-form__form input[type="text"]:-webkit-input-placeholder,
+  .block-form .block-form__form input[type="email"]:-webkit-input-placeholder,
   .block-form .block-form__form textarea:-webkit-input-placeholder {
     font: 16px "Roboto-Light", sans-serif;
     color: #a7a7a7;
@@ -662,3 +663,11 @@ header {
 @media (max-width: 1199px) {
   .web-app-dev .web-app-dev__item {
     margin-right: 23px; } }
+
+@media (max-width: 991px) {
+  .web-app-dev .web-app-dev__item {
+    width: 100%; }
+  .partners .partners-list__item {
+    width: 100%; }
+  .block-form .block-form__form input[type="text"], .block-form .block-form__form textarea {
+    width: 100%; } }
